--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.0",
     "firebase": "^8.2.0",
+    "mathjs": "^11.8.2",
     "next": "12.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
